# QuantClaw

./: .clang-format  .coderabbit.yaml  .gitignore  CMakeLists.txt  CMakePresets.json  FORMAT.md  README.md  README_CN.md  config.example.json
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: 0_bug_report.yml  1_feature_request.yml  2_question.yml  3_proposal.yml
.github/workflows/: ci-hardening.yml  clean-cache.yml  codeql-analysis.yml  deploy-website.yml  docker-publish.yml  github-actions.yml  nightly-hardening.yml  release-hardening.yml  release.yml
docs/: CODE_FORMATTING.md  CONTRIBUTING.md
include/quantclaw/: builtin_skills.hpp  config.hpp  constants.hpp
include/quantclaw/auth/: openai_codex_auth.hpp  provider_auth.hpp
include/quantclaw/channels/: adapter_manager.hpp  channel_base.hpp  channel_policy.hpp
include/quantclaw/cli/: agent_commands.hpp  cli_manager.hpp  commands.hpp  gateway_commands.hpp  mcp_commands.hpp  model_auth_commands.hpp  onboard_commands.hpp  session_commands.hpp
include/quantclaw/common/: defer.hpp  noncopyable.hpp  parse_util.hpp  string_util.hpp  try.hpp
include/quantclaw/core/: agent_loop.hpp  content_block.hpp  context_pruner.hpp  cron_scheduler.hpp  memory_manager.hpp  memory_search.hpp  prompt_builder.hpp  session_compaction.hpp  signal_handler.hpp  skill_loader.hpp  subagent.hpp  usage_accumulator.hpp
include/quantclaw/gateway/: command_queue.hpp  daemon_manager.hpp  gateway_client.hpp  gateway_server.hpp  protocol.hpp
include/quantclaw/mcp/: mcp_client.hpp  mcp_server.hpp  mcp_tool_manager.hpp  quantclaw_mcp_tools.hpp
include/quantclaw/platform/: ipc.hpp  process.hpp  service.hpp
include/quantclaw/plugins/: hook_manager.hpp  plugin_manifest.hpp  plugin_registry.hpp  plugin_system.hpp  sidecar_manager.hpp
include/quantclaw/providers/: anthropic_provider.hpp  cooldown_tracker.hpp  curl_raii.hpp  failover_resolver.hpp  llm_provider.hpp  openai_codex_provider.hpp  openai_provider.hpp  provider_error.hpp  provider_registry.hpp
include/quantclaw/security/: exec_approval.hpp  rate_limiter.hpp  rbac.hpp  sandbox.hpp  tool_permissions.hpp
include/quantclaw/session/: session_maintenance.hpp  session_manager.hpp
include/quantclaw/tools/: browser_tool.hpp  tool_chain.hpp  tool_registry.hpp
include/quantclaw/web/: api_routes.hpp  web_server.hpp
scripts/: build.sh  build_ui.sh  format-code-docker.sh  format-code.sh  gateway-manual.bat  gateway-setup-windows.ps1  install.sh  release.sh
scripts/smoke-tests/: package-lock.json  package.json  ws-concurrent.js  ws-rpc.js
sidecar/: package-lock.json  package.json  tsconfig.json
sidecar/src/: hook-dispatcher.ts  index.ts  plugin-api-shim.ts  plugin-loader.ts  plugin-runtime-shim.ts  plugin-sdk-shim.ts  rpc-server.ts  tool-executor.ts  types.ts
sidecar/test/: hook-dispatcher.test.ts  plugin-loader.test.ts  rpc-methods.test.ts  rpc-server.test.ts
src/: main.cpp
src/adapters/: base.test.ts  base.ts  discord.ts  feishu.ts  package-lock.json  package.json  qq.ts  telegram.ts
src/auth/: openai_codex_auth.cpp  provider_auth.cpp
src/channels/: adapter_manager.cpp  channel_policy.cpp
src/cli/: agent_commands.cpp  cli_manager.cpp  commands.cpp  gateway_commands.cpp  model_auth_commands.cpp  onboard_commands.cpp  session_commands.cpp
src/core/: agent_loop.cpp  config.cpp  context_pruner.cpp  cron_scheduler.cpp  memory_manager.cpp  memory_search.cpp  message_commands.cpp  mmr_reranker.cpp  multi_stage_compaction.cpp  prompt_builder.cpp  session_compaction.cpp  signal_handler.cpp  skill_loader.cpp  subagent.cpp  usage_accumulator.cpp  vector_index.cpp
src/gateway/: command_queue.cpp  daemon_manager.cpp  gateway_client.cpp  gateway_server.cpp  rpc_handlers.cpp
src/mcp/: mcp_client.cpp  mcp_server.cpp  mcp_tool_manager.cpp
src/platform/: ipc_tcp.cpp  process_unix.cpp  process_win32.cpp  service_unix.cpp  service_win32.cpp
src/plugins/: hook_manager.cpp  plugin_manifest.cpp  plugin_registry.cpp  plugin_system.cpp  sidecar_manager.cpp
src/providers/: anthropic_provider.cpp  cooldown_tracker.cpp  failover_resolver.cpp  openai_codex_provider.cpp  openai_provider.cpp  provider_error.cpp  provider_registry.cpp
src/security/: exec_approval.cpp  rate_limiter.cpp  rbac.cpp  sandbox.cpp  tool_permissions.cpp
src/session/: session_maintenance.cpp  session_manager.cpp
src/tools/: browser_tool.cpp  tool_chain.cpp  tool_registry.cpp
src/web/: api_routes.cpp  web_server.cpp
tests/: MANUAL_TEST_PLAN.md  smoke_test.sh  test-cli.sh  test-install-script.sh  test-onboard.sh  test_advanced_features.cpp  test_agent_commands.cpp  test_agent_loop.cpp  test_anthropic_provider.cpp  test_api_routes.cpp  test_browser_tool.cpp  test_builtin_skills.cpp  test_channel_policy.cpp  test_cli_commands.cpp  test_command_queue.cpp  test_common_utils.cpp  test_config.cpp  test_context_management.cpp  test_daemon_manager.cpp  test_e2e.cpp  test_exec_approval.cpp  test_failover.cpp  test_gateway.cpp  test_helpers.hpp  test_hybrid_memory_search.cpp  test_mcp_client.cpp  test_mcp_integration.cpp  test_mcp_server.cpp  test_mcp_tool_manager.cpp  test_memory_manager.cpp  test_message_commands.cpp  test_model_auth_commands.cpp  test_multi_stage_compaction.cpp  test_openai_codex_auth.cpp  test_openai_codex_provider.cpp  test_openai_provider.cpp  test_p1_features.cpp  test_parse_util.cpp  test_platform.cpp  test_plugin_system.cpp  (+17 more)
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/agents/: tool-catalog.node.test.ts  tool-catalog.ts  tool-display-common.node.test.ts  tool-display-common.ts  tool-policy-shared.ts
ui/src/gateway/: device-auth.node.test.ts  device-auth.ts  (+2 more)
website/: .gitignore  README.md  index.md  package-lock.json  package.json
website/.vitepress/: config.ts
website/guide/: architecture.md  building.md  cli-reference.md  configuration.md  contributing.md  documentation.md  features.md  getting-started.md  installation.md  plugins.md
website/public/: FAVICON_INSTRUCTIONS.md
website/zh/: index.md
(+69 files in other folders)
